fixing overflow css error on windows

--- a/src/App.less
+++ b/src/App.less
@@ -2,4 +2,5 @@
 .App, .ReactApp {
     background: @clr-black;
     height: 100%;
+    overflow: hidden;
 }
