--- a/src/defaults/tags.less
+++ b/src/defaults/tags.less
@@ -1,12 +1,8 @@
-html {
-    height: 100%;
-    min-height: 100%;
-}
-
-body {
+html, body {
     height: 100%;
     margin: 0;
     min-height: 100%;
+    overflow: hidden;
     padding: 0;
 }
 
